--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Phoenix Tracker</title>
+    <!-- Runtime configuration that will be generated at container startup -->
+    <script src="%PUBLIC_URL%/runtime-config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
